# hyper-catch

./: .env.sample  .gitignore  Cargo.toml  LICENSE  README.md  catch-example.toml
.github/workflows/: ci.yml
src/: contract.rs  contract_getter.rs  formatter.rs  main.rs  nft_types.rs  option.rs  outputter.rs  safe_ethers.rs
src/abis/: erc1155.json  erc721.json
