[package]
name = "hyper-catch"
version = "0.1.0"
edition = "2021"
authors = ["serinuntius <wasab1gj@gmail.com>"]
license = "MIT"
repository = "https://github.com/noplan-inc/hyper-catch"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive", "env"]}
ethers = "0.17.0"
tokio = "1.21.1"
serde_json = "1.0"
serde = "1.0.145"
anyhow = "1.0.65"
